terraform-ls: update to 0.32.7

--- a/devel/terraform-ls/Portfile
+++ b/devel/terraform-ls/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/hashicorp/terraform-ls 0.32.6 v
+go.setup            github.com/hashicorp/terraform-ls 0.32.7 v
 categories          devel
 maintainers         {amake @amake} openmaintainer
 license             MPL-2
@@ -15,9 +15,9 @@ long_description    ${description}
 build.args-append   -ldflags=\"-s -w\"
 
 checksums           ${distname}${extract.suffix} \
-                        rmd160  db13f9ddff1a31e319247f29ee3b4bc03ba7e6f6 \
-                        sha256  956143fd1a8e6dd96bca235ccc27b4fc5e5c25eeafad72e35382b027281f5417 \
-                        size    1642534
+                        rmd160  cbe9fbf40b0e83c727c3763193b4b2d55f3fa76d \
+                        sha256  b0f5bdffe9bc769413faf40efe7346983533e832362aef7cffffa53e63b84aec \
+                        size    1642490
 
 go.vendors          mvdan.cc/gofumpt \
                         repo    github.com/mvdan/gofumpt \
@@ -81,10 +81,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  11d8a944c8758f6955dc431be141eb08a76acf2b6888395bbfb188f9c098dbd4 \
                         size    1486963 \
                     golang.org/x/mod \
-                        lock    v0.14.0 \
-                        rmd160  6a18b7beba1e08f18c3db26224b9538e15f2f83a \
-                        sha256  c2aded81e0904c41b17106287726926977d0554c5dd9b8191174a888c7301d25 \
-                        size    122056 \
+                        lock    v0.15.0 \
+                        rmd160  f53726a7e868cc34b4234d7c86ba6b6951915425 \
+                        sha256  031a0dfe5c6a39e6e037e78e4e7881f3c3d4e7e3bbfa214167619a6888e0d519 \
+                        size    121705 \
                     golang.org/x/crypto \
                         lock    v0.18.0 \
                         rmd160  53a8a4ac652109ef207962e696e4961b861cfca0 \
@@ -92,16 +92,15 @@ go.vendors          mvdan.cc/gofumpt \
                         size    1809200 \
                     go.opentelemetry.io/otel \
                         repo    github.com/open-telemetry/opentelemetry-go \
-                        lock    v1.22.0 \
-                        rmd160  13bf30911276616605d2e1a4dda7cb440ba99e8c \
-                        sha256  2a7e469544b3aa1b6318435b4e6563c1aea9b185ff162acec92059376d30dae7 \
-                        size    1499492 \
+                        lock    v1.23.1 \
+                        rmd160  637237c946380f24335190b8c6ce1deab5819dd1 \
+                        sha256  5a5f3db57fd2f642ca4de2fa410892cd031de141be476732bc0acbbfe33f2a92 \
+                        size    1514257 \
                     go.opentelemetry.io/contrib \
                         repo    github.com/open-telemetry/opentelemetry-go-contrib \
-                        lock    v1.22.0 \
-                        rmd160  5d683e8fd908ebb1df79330d36de597144cb9da9 \
-                        sha256  7d34690661300bbb14f3d56a443f5f78370795cfb9ce2faf8771f381e9e33660 \
-                        size    609396 \
+                        lock    v1.23.0 \
+                        rmd160  833e974662c8dc3b143eed65fe2d446d261ba447 \
+                        sha256  0380a6f249c220bda2c51c822344e532a668b0326e7573919c7ed82b90aedcdb \
                     go.bobheadxi.dev/streamline \
                         repo    github.com/bobheadxi/streamline \
                         lock    v1.2.1 \
@@ -120,20 +119,20 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  499b467229e77cbca9b78f3a2e7ef6a792014fb666b07833e412bf9940f58d76 \
                         size    7254 \
                     github.com/zclconf/go-cty \
-                        lock    v1.14.1 \
-                        rmd160  5f4efc8a57994c3c040d655ce013653594d193ca \
-                        sha256  95bfcdb600f356e048697cfddbc915811772036f89351cc34a03506b70f9c5c9 \
-                        size    245341 \
+                        lock    v1.14.2 \
+                        rmd160  6def7d4c8cc562f8b2fdaa55e84ffe058f018187 \
+                        sha256  10c8ff64676defac69849015248ba405aee4dd6c694d247d0c7cb8f434337aff \
+                        size    245650 \
                     github.com/xanzy/ssh-agent \
                         lock    v0.3.3 \
                         rmd160  493feb22f8d500a8783ef9a9670ab3518c88d841 \
                         sha256  3fd2fc9180497e9ef97c95d581c472f86890383600b5226c0d4a7bb04eed0354 \
                         size    8629 \
                     github.com/vektra/mockery \
-                        lock    v2.40.1 \
-                        rmd160  f11677d6ecbb6ca7361799f326b9bfe747815eb0 \
-                        sha256  36d17d3c33b5351581d635c61733afe3da69f32ca0379e93362a15cf60bc337a \
-                        size    1065651 \
+                        lock    v2.40.3 \
+                        rmd160  72275bc8e4838b349375ae546c3d313d90c47ff4 \
+                        sha256  1df1f69a37cdee5d5dbae3d42c758da869bee1e8c8c7c7dc0bf1edb2d48b5c50 \
+                        size    1066137 \
                     github.com/subosito/gotenv \
                         lock    v1.4.2 \
                         rmd160  adcd280a400d4a3d2c889d69a88dd4413baa6232 \
@@ -210,10 +209,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  2832965221246272462a03ffc8e159c94d8f534827f660f1ac4fc77e5ccd644c \
                         size    44037 \
                     github.com/posener/complete \
-                        lock    v1.1.1 \
-                        rmd160  216bede86928670381490cb7e9b64e622557c8ee \
-                        sha256  7f8dd29875483fa28199c76a127d52698b4de6d8c1c936657975d885b90a251e \
-                        size    19019 \
+                        lock    v1.2.3 \
+                        rmd160  6144bcf9c89075d599423bfc1ed78af017176ec3 \
+                        sha256  10d434d0dd64f516a11e795fe35de984c76ad410f8988e6f4fab2012d1213d59 \
+                        size    22736 \
                     github.com/pmezard/go-difflib \
                         lock    v1.0.0 \
                         rmd160  fc879bfbdef9e3ff50844def58404e2b5a613ab8 \
@@ -300,10 +299,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  71e68e76e460aff1af8b58453a5a7b2278c42f6659c8c7b4321907bdf14ee6eb \
                         size    18269 \
                     github.com/mattn/go-isatty \
-                        lock    v0.0.17 \
-                        rmd160  8a79d7ac1ac5311cb4892f75b7a439fd07cccc17 \
-                        sha256  e75610c71dfca6ab7f671d1372f7b603b98338b7cbf1098d5a418d5a6760fb52 \
-                        size    4700 \
+                        lock    v0.0.20 \
+                        rmd160  ef20ccdf87de8b704c0c7118625b2beb31d8f1b4 \
+                        sha256  397549e98cf5d40df585f31dc7902f017c37be88c64311dd2b4aeccab4009949 \
+                        size    4717 \
                     github.com/mattn/go-colorable \
                         lock    v0.1.13 \
                         rmd160  c9e8ab9d0773c0984f36235e3c9f8c033552ac1a \
@@ -396,10 +395,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  168e4d537b188bac51bcc8f7c2b5bae6a1f8151a8426c7679a99307180471851 \
                         size    31956 \
                     github.com/hashicorp/terraform-schema \
-                        lock    b029fdc141c1 \
-                        rmd160  dd19fba9a846a0a00d866f79f22aaff4ad767ce1 \
-                        sha256  cc755cbbf6761048cfdfa33aa033b94749c89008709e2e95700bbdf919cc6abe \
-                        size    111889 \
+                        lock    1ed5c2075222 \
+                        rmd160  10e31bb3e0db72226d38aaee2f80eb9ed169adb3 \
+                        sha256  8ce917ad31144ce2f683f8f0cfcb5a89988b854d9915f502dd44c67642cdd595 \
+                        size    110073 \
                     github.com/hashicorp/terraform-registry-address \
                         lock    v0.2.3 \
                         rmd160  6a5f7de6c9b5266224ae89e2a9d41533edd5557a \
@@ -416,20 +415,20 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  e533f95c1921f444d028f9b77ff7690a4782be003c3f0b8bc5931eb3216c8abf \
                         size    77628 \
                     github.com/hashicorp/hcl-lang \
-                        lock    f43c27231c10 \
-                        rmd160  e3a801a9f4933cf5fa87529e6581930d2c83864f \
-                        sha256  bd16e4582ee1a8acfeeefb47f0d9f07076c39f96978061318f35e122274dbc08 \
-                        size    235740 \
+                        lock    37b8f083ac65 \
+                        rmd160  219ccd9d6a8789606138be02fb1b0f690d155297 \
+                        sha256  0d64690cf36201c3ec88cd4ec8ac0ed6bd1c9451b9208dc752239c6728019dca \
+                        size    239017 \
                     github.com/hashicorp/hcl \
                         lock    v2.19.1 \
                         rmd160  2920ac854c6c33b1da5413aac21d2acb7653130d \
                         sha256  c17fbdc445601764fe3442fd02a06934bd5ef5a2c02eef4835112772a0d95ef8 \
                         size    435853 \
                     github.com/hashicorp/hc-install \
-                        lock    v0.6.2 \
-                        rmd160  ea196da7979fbae9249886988c214683f28b3798 \
-                        sha256  a7828262dbb6f8c7f6b33911babfd858eeb9926beaeac3a0301082b8fa0bdeef \
-                        size    15157920 \
+                        lock    v0.6.3 \
+                        rmd160  0eacaecf91a96834cf5e72eb628a456235a9bcf5 \
+                        sha256  2da3cf9bd5c36a0674b132c1c90fb886985393dc2e13602fd3564d243758cfca \
+                        size    15158608 \
                     github.com/hashicorp/golang-lru \
                         lock    v0.5.4 \
                         rmd160  833d8d87b84f13bc545ecffff9358a19671d185a \
@@ -501,10 +500,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  61ada6c3d2cf828f1ae2564cb34aea76bba2817671354da60d6e851c52f20cf8 \
                         size    56969 \
                     github.com/go-git/go-git \
-                        lock    v5.10.1 \
-                        rmd160  c4861cd46296621d44abae33ca5b68da2e29f036 \
-                        sha256  1c44a1c5167b989c2b139f2d6f40c3f555125d7d083b329173f35dc990781645 \
-                        size    530081 \
+                        lock    v5.11.0 \
+                        rmd160  898532a8d49bff0a0e0fb7557cfa83c950bfff99 \
+                        sha256  fb5ca740995eab5a984229611f244c3e79e7a76f2acdce8b1756d9f6b380cd22 \
+                        size    535271 \
                     github.com/go-git/go-billy \
                         lock    v5.5.0 \
                         rmd160  46da5f9942ae216d3bd3f386d430ab4902576cb7 \
@@ -536,10 +535,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  f31b40d924ae6cbf00d9835b2b5b9270ddf6adf034ceb664bdc9bd065beececc \
                         size    11955 \
                     github.com/fatih/color \
-                        lock    v1.15.0 \
-                        rmd160  b1be266641e03921cb4eaa88439d584e4e87f8c3 \
-                        sha256  73a9a36be3feac229dfbdc5a29a7bb007a2c5a77721fcae3f753316f2d10382e \
-                        size    11274 \
+                        lock    v1.16.0 \
+                        rmd160  e366491b67c4f4afbc5d3a26f2b76585d06f8381 \
+                        sha256  968744e2d5468beab9fe694143737c0c9e5cebfe860211c521a8424320cfa910 \
+                        size    12112 \
                     github.com/emirpasic/gods \
                         lock    v1.18.1 \
                         rmd160  187969a59decbaf25d2ed75b8171e029e5537247 \
@@ -576,10 +575,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  bc5a26e9774689b81d83b7748e86893ebe25c4bd9cad136aeff476adebeb390b \
                         size    87316 \
                     github.com/cloudflare/circl \
-                        lock    v1.3.3 \
-                        rmd160  ef9a1bdb77113c7c75ffc06a41736c99fbedcdac \
-                        sha256  0504e15b94cb53ad1ffe846e6a98a7fcbaee60fb9e96d57ce6fbc7b32e32d0c7 \
-                        size    4913077 \
+                        lock    v1.3.7 \
+                        rmd160  98d536abbd648189637538028f7dd627a84d973e \
+                        sha256  2e4e031b8bb07c992cc994480dd6c9d28fec6fa5e6bee68766349cf3c0917239 \
+                        size    4938815 \
                     github.com/chigopher/pathlib \
                         lock    v0.15.0 \
                         rmd160  f4c369202ec0cc342948df6db03c8645501466e8 \
@@ -591,10 +590,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  32fd3ad8f8ba488804b82b3b6c6361f838c63bb93001494d010ca71566fc99d4 \
                         size    7495 \
                     github.com/armon/go-radix \
-                        lock    7fddfc383310 \
-                        rmd160  c23e9776d2dccb4d8f516054df8a7c5019a1a2c1 \
-                        sha256  c9e18e6513e111157e3adb7e3f1c6e277c98f289d0ebc2a838975bd0bded053b \
-                        size    5943 \
+                        lock    v1.0.0 \
+                        rmd160  fbaf4605ffc4654bdd5b8a3b60d7f2b65333d1b3 \
+                        sha256  f9a27dc2a25030e5a6a5334dd82697e0494e5719ec4cfdc59b6ba903f99c9400 \
+                        size    5982 \
                     github.com/apparentlymart/go-textseg \
                         lock    v15.0.0 \
                         rmd160  ef720e5dd32bbaf319dc34ae765346ef0a62bd25 \
@@ -617,10 +616,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  b92ec48f119fcde6b309139499b3395f1e2616edf62399d1d68fe22e63a2a095 \
                         size    13106 \
                     github.com/ProtonMail/go-crypto \
-                        lock    3c4c8a2d2371 \
-                        rmd160  767266c7e0a71978d9028a86f80717b065c33a9a \
-                        sha256  d80a0ee4a2854d9415b912c3be4d0db9de89806a9271251d51a35c326cc5e238 \
-                        size    333549 \
+                        lock    v1.1.0-alpha.0 \
+                        rmd160  09656de058d0bfd69d8591ea12e2f633f880a3df \
+                        sha256  9db92c6b7eeefe54942d4a734c9eff68e772e5cb6a2f988b58b76ad35193c5f3 \
+                        size    504157 \
                     github.com/Microsoft/go-winio \
                         repo    github.com/microsoft/go-winio \
                         lock    v0.6.1 \
@@ -628,10 +627,10 @@ go.vendors          mvdan.cc/gofumpt \
                         sha256  dd0445999576bd7b214d2f6742d1e960448ce3adb0c667905ea8a4a9cd56c636 \
                         size    109955 \
                     github.com/Masterminds/sprig \
-                        lock    v3.2.1 \
-                        rmd160  de63d703b69d403532a78ed15c4909eed4014dbe \
-                        sha256  c3b414bbdcf56fd071a61744fb8fb2fdec8ae98f49ab04021430f45865dcdd32 \
-                        size    55510 \
+                        lock    v3.2.3 \
+                        rmd160  2b8476be3412c7fa9f5f7d6785b29daa28d002cc \
+                        sha256  d71243c7106756126794968c5eeebf84bb9e25adbabbc51b3bb53aad7ae158a2 \
+                        size    56457 \
                     github.com/Masterminds/semver \
                         lock    v3.2.1 \
                         rmd160  f08bea69acc966dc0a5ae652dcc00050197da75d \
