py-jsonschema: add py-jsonschema-format-nongpl metaport

--- a/python/py-jsonschema/Portfile
+++ b/python/py-jsonschema/Portfile
@@ -53,3 +53,26 @@ if {${name} ne ${subport}} {
 
     livecheck.type      none
 }
+
+# py-jsonschema-format-nongpl metaport (jsonschema[format-nongpl])
+foreach python_version ${python.versions} {
+    subport py${python_version}-jsonschema-format-nongpl {
+        supported_archs     noarch
+        distfiles
+        build {}
+        destroot {
+            xinstall -d -m 0755 ${destroot}${prefix}/share/doc/${subport}
+            system "echo ${subport} > ${destroot}${prefix}/share/doc/${subport}/stub"
+        }
+        depends_lib-append  port:py${python.version}-jsonschema \
+                            port:py${python.version}-fqdn \
+                            port:py${python.version}-idna \
+                            port:py${python.version}-isoduration \
+                            port:py${python.version}-jsonpointer \
+                            port:py${python.version}-rfc3339-validator \
+                            port:py${python.version}-rfc3986-validator \
+                            port:py${python.version}-uri-template \
+                            port:py${python.version}-webcolors
+        livecheck.type      none
+    }
+}
