meta: fix my github handle in maintainer references

--- a/sysutils/yabai/Portfile
+++ b/sysutils/yabai/Portfile
@@ -10,7 +10,7 @@ github.tarball_from     archive
 
 categories              sysutils
 platforms               darwin
-maintainers             {@thekevjames thekev.in:macports} openmaintainer
+maintainers             {@TheKevJames thekev.in:macports} openmaintainer
 license                 MIT
 description             A tiling window manager for macOS based on binary space partitioning
 long_description        yabai is a window management utility that is designed to work as an extension to the built-in window manager of macOS.
