bind9: fix compiler.blacklist to avoid picking gcc-4.0

--- a/net/bind9/Portfile
+++ b/net/bind9/Portfile
@@ -52,7 +52,7 @@ universal_variant \
 # Needs working __atomic_* builtins
 # Apple clang 15.0.0 from Xcode before 15.2 has a codgen bug that causes
 compiler.blacklist \
-                gcc-4.2 \
+                *gcc-4.0 *gcc-4.2 \
                 {clang < 500} \
                 {clang >= 1500.0.40.1 < 1500.1.0.2.5 }
 
