bind9: fix broken PowerPC assembler in rwlock

--- a/net/bind9/Portfile
+++ b/net/bind9/Portfile
@@ -57,7 +57,8 @@ compiler.blacklist \
                 {clang >= 1500.0.40.1 < 1500.1.0.2.5 }
 
 patchfiles      atomics.patch \
-                lib_dns_Makefile.in.patch
+                lib_dns_Makefile.in.patch \
+                patch-fix-rwlock.diff
 
 # tests require `sudo bin/tests/system/ifconfig.sh up`
 test.run        yes
