py-setuptools_scm: fix py38–39 subports
Fixes: https://trac.macports.org/ticket/69106

--- a/python/py-setuptools_scm/Portfile
+++ b/python/py-setuptools_scm/Portfile
@@ -58,6 +58,14 @@ if {${name} ne ${subport}} {
         depends_lib-append  port:py${python.version}-packaging \
                             port:py${python.version}-typing_extensions
 
+        if {${python.version} < 310} {
+            # https://trac.macports.org/ticket/69106
+            # https://github.com/pypa/setuptools_scm/issues/1013
+            PortGroup       conflicts_build 1.0
+
+            conflicts_build py${python.version}-setuptools_scm
+        }
+
         if {${python.version} < 311} {
             depends_lib-append  port:py${python.version}-tomli
         }
