g-ls: Use different name to avoid re-indexing
With the introduction of this port, a small issue involved with
port indexing allowed this port to be reindexed every time.

This is ultimately better, since other package managers adopt
this name as well.

--- a/sysutils/g-ls/Portfile
+++ b/sysutils/g-ls/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 PortGroup               golang 1.0
 
 go.setup                github.com/Equationzhao/g 0.26.0 v
+name                    g-ls
 revision                0
 categories              sysutils
 license                 MIT
@@ -26,8 +27,8 @@ go.offline_build        no
 build.args-append       -ldflags="-s -w"
 
 destroot {
-    xinstall -m 0755 ${worksrcpath}/${name} ${destroot}${prefix}/bin/${name}
+    xinstall -m 0755 ${worksrcpath}/g ${destroot}${prefix}/bin/g
     xinstall -d ${destroot}${prefix}/share/zsh/site-functions
-    xinstall -m 0644 ${worksrcpath}/completions/zsh/_${name} \
+    xinstall -m 0644 ${worksrcpath}/completions/zsh/_g \
         ${destroot}${prefix}/share/zsh/site-functions
 }
