--- a/sysutils/gdu/Portfile
+++ b/sysutils/gdu/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/dundee/gdu 5.25.0 v
+go.setup            github.com/dundee/gdu 5.26.0 v
 go.package          github.com/dundee/gdu/v5
 github.tarball_from archive
 revision            0
@@ -42,9 +42,9 @@ notes "
 "
 
 checksums           ${distname}${extract.suffix} \
-                        rmd160  644c1269283cae631e7f25efbf95a880b69301c9 \
-                        sha256  83fe876d953b4f2f7a856552e758aae4aa0cd9569dcf1aded61bdc834b834275 \
-                        size    61990
+                        rmd160  123b5b86d9e5297e2ebafa36fac0dd9ce142ac02 \
+                        sha256  5e7dbaa83ab2f9c7e39e44b1533907a6ca41b5c019b04647286bc7c1a435a555 \
+                        size    137703
 
 go.vendors          gopkg.in/yaml.v3 \
                         lock    v3.0.1 \
@@ -71,6 +71,22 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  e678fbf405f6f2de2dd29b0a8b71baec9f1f1321 \
                         sha256  8c0922a390cb8c22c340d69aa24ecf3cd923b30ca28dc96965d32d4b3a4e917d \
                         size    1436856 \
+                    golang.org/x/net \
+                        lock    a158d28d115b \
+                        rmd160  9767e443ca59387855074e809c5c00d74781344f \
+                        sha256  72b4e0f2c29972456f83125031997045053f67c898a3067d888b1bc18df34e71 \
+                        size    1228035 \
+                    golang.org/x/exp \
+                        lock    2c58cdc269a3 \
+                        rmd160  6cf637ec5049215062c4a498de38c81b55194810 \
+                        sha256  94a8bbf8c26c42a7d421298b21bd831b5962c9f7a399e8c520a855211991d695 \
+                        size    1719353 \
+                    go.opencensus.io \
+                        repo    github.com/census-instrumentation/opencensus-go \
+                        lock    v0.22.5 \
+                        rmd160  42d6da422ed33a4d60ad8c73fb4dedbc74e48b4d \
+                        sha256  646fa9bb863465c081b3f979815bcfe6e9b17f7eca6eb4fc62172af11e19d75b \
+                        size    171344 \
                     github.com/stretchr/testify \
                         lock    v1.8.4 \
                         rmd160  8e1645055c9b1d8e117df7974034e74b7f600d27 \
@@ -86,11 +102,16 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  2d0592a4c5aca1ba5daa45cd1d4e662adadd0703 \
                         sha256  913afd358ab699baf7773e7a5661c9f6436c6f825da2a1d61623e69d2c0b4b2d \
                         size    187188 \
+                    github.com/spaolacci/murmur3 \
+                        lock    v1.1.0 \
+                        rmd160  53215abb0d59b6c64e926e90fb33da1906a1a525 \
+                        sha256  54d6a3300600dd2f5e444f6d19fe1f91e1174329cdfff1d50dae837689214a68 \
+                        size    7396 \
                     github.com/sirupsen/logrus \
-                        lock    v1.9.2 \
-                        rmd160  32b31790bc676eed1422e637658712d98ffc352a \
-                        sha256  eb934b0cb26fdc4e46d9c3167d1ab9aad82c7577146808d39ad5a077ca2bb90b \
-                        size    49497 \
+                        lock    v1.9.3 \
+                        rmd160  db211aeb52d4a85a7dc8acf83f7475b5f4fa9092 \
+                        sha256  36a05391b8c6cef99e9a9c78b598f3a8da8feed318b385eadcdede08ae5cc229 \
+                        size    50327 \
                     github.com/rogpeppe/go-internal \
                         lock    v1.6.1 \
                         rmd160  60a7c8a40bd73160f7a61ab365d9ebab06ff90a1 \
@@ -111,6 +132,11 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  fc879bfbdef9e3ff50844def58404e2b5a613ab8 \
                         sha256  7cd492737641847266115f3060489a67f63581e521a8ec51efbc280c33fc991f \
                         size    11409 \
+                    github.com/pkg/errors \
+                        lock    v0.9.1 \
+                        rmd160  dc065c655f8a24c6519b58f9d1202eb266ecda40 \
+                        sha256  208d21a7da574026f68a8c9818fa7c6ede1b514ef9e72dc733b496ddcb7792a6 \
+                        size    13422 \
                     github.com/pbnjay/memory \
                         lock    7b4eea64cf58 \
                         rmd160  418cbfd363c0334f91132d717b74dd2d89fa6383 \
@@ -151,11 +177,46 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  0895c899b9d88b87beccda0a9b4c5c7057e858f0 \
                         sha256  88d8d187ffa4faf0362b48c3d327ad440c7e5fb179ea3247e69269cab128a6b9 \
                         size    10043 \
+                    github.com/klauspost/compress \
+                        lock    v1.12.3 \
+                        rmd160  935320823553891f7b8daa62f03bde07a732ac44 \
+                        sha256  81e146e96e348c4545800505a42822efa6a04a785be7acaf4a243112dba20f7a \
+                        size    15350008 \
                     github.com/inconshreveable/mousetrap \
                         lock    v1.1.0 \
                         rmd160  88f9577df93ac0f8801d8960adc7f28e38867f3e \
                         sha256  f69af10ff08c0e87f92dac3ee5172d8ed02463725b74edfc8943ef018a1a632d \
                         size    5343 \
+                    github.com/google/flatbuffers \
+                        lock    v1.12.1 \
+                        rmd160  af6bb4c02e7bd0e6ee683e6d9ce24e7e08f3b575 \
+                        sha256  54bb20fc181b52db56cfb46573651b03d9c16182222e889561233bc293ea0886 \
+                        size    1145588 \
+                    github.com/golang/snappy \
+                        lock    v0.0.3 \
+                        rmd160  171e3de70a1e477829c27cf67e87d29ee461e043 \
+                        sha256  5d2b36b275164254106f20d2843ff65a4e3fccca5aaf0f9a50aa875b59add4f3 \
+                        size    65996 \
+                    github.com/golang/protobuf \
+                        lock    v1.3.1 \
+                        rmd160  801150957b99de8eef10cb8d5ea2a08b240f2cb5 \
+                        sha256  a53c2c8c5c02311d2fa3bc6656614e20f9e5568b87c9f07702f083457e69f7d2 \
+                        size    310935 \
+                    github.com/golang/groupcache \
+                        lock    869f871628b6 \
+                        rmd160  2084d9ccfa9b4a2c851d1523311914d7a1c3b80c \
+                        sha256  7baec0b637c75c392c2a93d3ccb7796841af42be3615182c67f193a98acd005e \
+                        size    26045 \
+                    github.com/golang/glog \
+                        lock    23def4e6c14b \
+                        rmd160  b5bd9166cd1e073a035b5bbd3c4d9febf2c917a7 \
+                        sha256  2826d20759090e909ba0f8771def236ad6433fc3e44bdc28374b309efe3e57cf \
+                        size    19662 \
+                    github.com/gogo/protobuf \
+                        lock    v1.3.2 \
+                        rmd160  c16e6e6fb8f26d3d1ceef9e99fa4dfb5899878fd \
+                        sha256  d24f8e0b99dbc6ffaa0731490bf80d3ab4cb0b332bcf4b57e3fd830c60e0960b \
+                        size    2040306 \
                     github.com/gdamore/tcell \
                         lock    v2.6.0 \
                         rmd160  05335f252adb8a5af62ec2e867bd17fa6398015b \
@@ -171,8 +232,38 @@ go.vendors          gopkg.in/yaml.v3 \
                         rmd160  b1be266641e03921cb4eaa88439d584e4e87f8c3 \
                         sha256  73a9a36be3feac229dfbdc5a29a7bb007a2c5a77721fcae3f753316f2d10382e \
                         size    11274 \
+                    github.com/dustin/go-humanize \
+                        lock    v1.0.0 \
+                        rmd160  e8641035159ea3e8839ee086f01f966443956303 \
+                        sha256  e45e3181c07b3e2dad8e1317e91a5bbbee4845067e3e3879a585a5254bc6a334 \
+                        size    17273 \
+                    github.com/dgryski/go-farm \
+                        lock    6a90982ecee2 \
+                        rmd160  a9f7f2372bd4bce849b55eef441e43b9a09330b0 \
+                        sha256  e90d46f1d9f70d28d20e4791aad8c2dbe7900d65bf42140018c443b3480eef72 \
+                        size    26795 \
+                    github.com/dgraph-io/ristretto \
+                        lock    v0.1.0 \
+                        rmd160  e7cc4ceac4227ccaad9b21b5f2d19afc89a0244b \
+                        sha256  38fc1990f18b1141672b6236853dd484b1a6993763b7b79376cc521a091b9e21 \
+                        size    310256 \
+                    github.com/dgraph-io/badger \
+                        lock    v3.2103.2 \
+                        rmd160  ee01113ff591c4e58ff0dfe372125d641e0929fa \
+                        sha256  5b53d88e2f9736ae9e5e6028721e37c00eafe078eb45146b895cf247bce93cb5 \
+                        size    2566452 \
                     github.com/davecgh/go-spew \
                         lock    v1.1.1 \
                         rmd160  7c02883aa81f81aca14e13a27fdca9e7fbc136f7 \
                         sha256  e85d6afa83e64962e0d63dd4812971eccf2b9b5445eda93f46a4406f0c177d5f \
-                        size    42171
+                        size    42171 \
+                    github.com/cespare/xxhash \
+                        lock    v2.1.1 \
+                        rmd160  0c0da0840864215209db2afcd2ee92a52ca2d4d1 \
+                        sha256  7416baf9eeefe07e3c50c57826d839cdbba125ea0a6d74af378e865df4f25e00 \
+                        size    9300 \
+                    github.com/OneOfOne/xxhash \
+                        lock    v1.2.2 \
+                        rmd160  35e2c7b623c069fc08aec00990ca5c82ad831a22 \
+                        sha256  e6a73b9f6acc9b361ea77edcb6f29103e96ac0c623c6d2882909698180e54694 \
+                        size    13444
