ghc: Fix dependency loop
* Fixes: https://trac.macports.org/ticket/69332

--- a/lang/ghc/Portfile
+++ b/lang/ghc/Portfile
@@ -193,7 +193,7 @@ if {${name} eq ${subport}} {
 
     # use these to specify python versions, python3 required
     # use ${prefix}/var/macports/sources/rsync.macports.org/macports/release/tarballs/ports/_resources/port1.0/group/python-1.0.tcl
-    set python3_version 311
+    set python3_version 312
     set python3_branch  [string index ${python3_version} 0].[string range ${python3_version} 1 end]
     set python3_prefix  ${frameworks_dir}/Python.framework/Versions/${python3_branch}
     set python3_bin     ${python3_prefix}/bin/python${python3_branch}
@@ -211,10 +211,10 @@ if {${name} eq ${subport}} {
                     port:HsColour \
                     port:python${python3_version} \
                     port:py${python3_version}-sphinx \
-                    port:texlive \
                     port:texlive-fonts-extra \
                     port:texlive-fonts-recommended \
                     port:texlive-latex-extra \
+                    port:texlive-xetex \
                     port:xz
 
     depends_lib-append  \
