socket_vmnet: correctly handle SOURCE_DATE_EPOCH
Set the build variable to a value computed by examining the latest
modified times of the source directory.

--- a/net/socket_vmnet/Portfile
+++ b/net/socket_vmnet/Portfile
@@ -20,9 +20,33 @@ checksums           rmd160  71e08771484d80458c72dba91f987122d17b3a06 \
                     sha256  1e4152732b355b22cdba88cd28f35f25cce4aab499589d236a95ccb47a90d855 \
                     size    18851
 
+post-extract {
+    # Base doesn't set SOURCE_DATE_EPOCH so we have to.
+    # https://trac.macports.org/ticket/59672
+    set latest 0
+    fs-traverse i [list ${worksrcpath}] {
+        if {[file isfile ${i}]} {
+            set t [file mtime ${i}]
+            if {${t} > ${latest}} {
+                set latest ${t}
+            }
+        }
+    }
+    set fp [open $env(TMPDIR)/SOURCE_DATE_EPOCH w]
+    puts -nonewline ${fp} ${latest}
+    close ${fp}
+}
+
+pre-build {
+    set fp [open $env(TMPDIR)/SOURCE_DATE_EPOCH r]
+    set latest [read ${fp}]
+    close ${fp}
+    build.args-append \
+                    SOURCE_DATE_EPOCH=${latest}
+}
+
 use_configure       no
 build.args          VERSION=${version} \
-                    SOURCE_DATE_EPOCH=1696806366 \
                     CFLAGS="${configure.cflags}" \
                     LDFLAGS="${configure.ldflags}" \
                     PREFIX=${prefix}
