R-bvhar: update to 2.0.0

--- a/R/R-bvhar/Portfile
+++ b/R/R-bvhar/Portfile
@@ -3,7 +3,8 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github ygeunkim bvhar 1.2.0 v
+# Revert to GitHub once updated there.
+R.setup             cran ygeunkim bvhar 2.0.0 v
 revision            0
 categories-append   math
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
@@ -11,17 +12,15 @@ license             MIT
 description         Bayesian Vector Heterogeneous Autoregressive Modelling
 long_description    {*}${description}
 homepage            https://ygeunkim.github.io/package/bvhar
-checksums           rmd160  4e4ff27223c1f501418ce1dddb1ac692593fc289 \
-                    sha256  396fcc7aff99d415d3988e1950cdb71ef3282dbce6276a1315fc5a468bde49ac \
-                    size    810983
+checksums           rmd160  2505fb1faf72620fc3779cb30800e440f0939985 \
+                    sha256  24bf2f613dfad40fa20693f6121a1968dba7f4a35b08c9f490491704a3a63cd6 \
+                    size    1154723
 
 depends_lib-append  port:R-bayesplot \
-                    port:R-doRNG \
+                    port:R-BH \
                     port:R-dplyr \
-                    port:R-forcats \
                     port:R-foreach \
                     port:R-ggplot2 \
-                    port:R-knitr \
                     port:R-lifecycle \
                     port:R-magrittr \
                     port:R-optimParallel \
