R-matsbyname: update to 0.6.10

--- a/R/R-matsbyname/Portfile
+++ b/R/R-matsbyname/Portfile
@@ -4,16 +4,16 @@ PortSystem          1.0
 PortGroup           R 1.0
 
 # Revert to GitHub once updated there.
-R.setup             cran MatthewHeun matsbyname 0.6.9 v
+R.setup             github MatthewHeun matsbyname 0.6.10 v
 revision            0
 categories-append   math
 maintainers         nomaintainer
 license             MIT
 description         Implementation of matrix mathematics
 long_description    {*}${description}
-checksums           rmd160  8cdbb6fa6255f457acaa9f9340b4d82dcbf57d9d \
-                    sha256  3365f091df1c8790fda84f77b0570aa1c6e507701e284b3a3d969430ad3a720f \
-                    size    245634
+checksums           rmd160  5a95c3d469264ecb9e4b73c8c0c7791b340a6d38 \
+                    sha256  cf1d8131a5ed3b560f9599fc03d6ff237087e852d829d741b62c2a13d80d621e \
+                    size    14815293
 supported_archs     noarch
 
 depends_lib-append  port:R-assertthat \
