R-parallelly: update to 1.37.0

--- a/R/R-parallelly/Portfile
+++ b/R/R-parallelly/Portfile
@@ -3,16 +3,16 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github HenrikBengtsson parallelly 1.36.0
+R.setup             github HenrikBengtsson parallelly 1.37.0
 revision            0
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
-license             LGPL-3
+license             LGPL-2.1+
 description         Enhancing the parallel package
 long_description    {*}${description}
 homepage            https://parallelly.futureverse.org
-checksums           rmd160  af5bf2f76b628dae27009dd9dcedc8dee31e6e7a \
-                    sha256  04dddbfecb4099056eb97c2baeeb1c721ce3bd8a36f92628c387beb3eb6f9fb1 \
-                    size    203096
+checksums           rmd160  7907bfbe3133c119e212e4d983c5a7394c4627ea \
+                    sha256  ede511ed751eda9b039f793e06a129c3d105bab7f6998662cb889d7294026b7f \
+                    size    254180
 supported_archs     noarch
 
 test.run            yes
