py-threadpoolctl: update to 3.3.0

--- a/python/py-threadpoolctl/Portfile
+++ b/python/py-threadpoolctl/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-threadpoolctl
-version             3.2.0
+version             3.3.0
 revision            0
 categories-append   science
 supported_archs     noarch
@@ -12,6 +12,7 @@ platforms           {darwin any}
 license             BSD
 
 python.versions     38 39 310 311 312
+python.pep517_backend   flit
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -20,12 +21,12 @@ long_description    {*}${description}
 
 homepage            https://github.com/joblib/threadpoolctl
 
-checksums           rmd160  bc71e6ea121d307c1dcc2619ee2763a945838817 \
-                    sha256  c96a0ba3bdddeaca37dc4cc7344aafad41cdb8c313f74fdfe387a867bba93355 \
-                    size    36266
+checksums           rmd160  d545c24b64b8aec8f9a86ee5fdd1246ddabc8ee6 \
+                    sha256  5dac632b4fa2d43f42130267929af3ba01399ef4bd1882918e92dbc30365d30c \
+                    size    41035
 
-patchfiles-append patch-test.diff
+if {${name} ne ${subport}} {
+    patchfiles-append   patch-test.diff
 
-python.pep517_backend   flit
-
-test.run  yes
+    test.run  yes
+}
