flyctl: update to 0.2.6

--- a/devel/flyctl/Portfile
+++ b/devel/flyctl/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           golang 1.0
 
-go.setup            github.com/superfly/flyctl 0.1.146 v
+go.setup            github.com/superfly/flyctl 0.2.6 v
 go.offline_build    no
 github.tarball_from archive
 revision            0
@@ -20,9 +20,9 @@ long_description    ${name} is a command-line interface for fly.io.
 
 homepage            https://fly.io
 
-checksums           rmd160  f8f9486ec7b465633673dc446accee44e14cf360 \
-                    sha256  7cdc685181ed2dd31c38cc4c5a02c12189f229f958d8c62844e0b4b416dc08a5 \
-                    size    1765167
+checksums           rmd160  bcab323f554fa472b043afc65e8d83fd26cc191d \
+                    sha256  da20d0a177183ebe1d15119fcad97b5b455e5236302fff475a4cac0c735aa59e \
+                    size    1669986
 
 build.cmd           "${go.bin} generate ./... && ${go.bin} build"
 
@@ -31,8 +31,9 @@ build.pre_args-append \
     -o ./_bin/${name} \
     -ldflags \" \
         -X ${go.package}/internal/buildinfo.environment=production \
-        -X ${go.package}/internal/buildinfo.buildDate=2022-03-15T00:00:00Z \
-        -X ${go.package}/internal/buildinfo.version=${version} \
+        -X ${go.package}/internal/buildinfo.branchName=v${version} \
+        -X ${go.package}/internal/buildinfo.buildDate=2024-02-15T00:00:00Z \
+        -X ${go.package}/internal/buildinfo.buildVersion=v${version} \
         -X ${go.package}/internal/buildinfo.commit=release \
     \"
 
