R-*: non-functional: replace Unlimited with Permissive

--- a/R/R-boot/Portfile
+++ b/R/R-boot/Portfile
@@ -9,7 +9,7 @@ R.recommended       yes
 R.setup             cran cran boot 1.3-28.1
 revision            0
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
-license             Unlimited
+license             Permissive
 description         Functions and datasets for bootstrapping
 long_description    {*}${description}. Recommended package.
 checksums           rmd160  524092c2e5cedb00a0ba309b924c00b9e0066adf \
