ruff: add to python category as well

--- a/devel/ruff/Portfile
+++ b/devel/ruff/Portfile
@@ -21,7 +21,7 @@ long_description    \
     tool. Ruff is extremely actively developed and used in many major \
     open-source projects.
 
-categories          devel
+categories          devel python
 installs_libs       no
 license             MIT
 maintainers         {gmail.com:herby.gillot @herbygillot} \
