py-pikepdf: update to 8.13.0

--- a/python/py-pikepdf/Portfile
+++ b/python/py-pikepdf/Portfile
@@ -6,7 +6,7 @@ PortGroup           python 1.0
 PortGroup           compiler_blacklist_versions 1.0
 
 name                py-pikepdf
-github.setup        pikepdf pikepdf 8.12.0.post1 v
+github.setup        pikepdf pikepdf 8.13.0 v
 revision            0
 categories-append   graphics
 license             MPL-2
@@ -17,9 +17,9 @@ long_description    {*}${description}
 
 python.versions     38 39 310 311 312
 
-checksums           rmd160  d18a019366ffadb5e5a75f9a57970408d8e81116 \
-                    sha256  3f900926bf583782b6d84f442a984e40d6eed3e40216478f4572c44ecde6074a \
-                    size    2925494
+checksums           rmd160  c10fc6dec92a881bd10c43ca41a45d71997b91c4 \
+                    sha256  172cdc8d83e19cbd092ffb16aa22a1d8f125ab307378a5135ed9d9577d9b5f00 \
+                    size    2925488
 
 if {${name} ne ${subport}} {
     depends_build-append \
