bind9: fix on Leopard and PowerPC (#22639)
* bind9: use path-style deps for libuv and jemalloc

* bind9: depend on jemalloc on 10.6+, not earlier

* bind9: fix compiler.blacklist to avoid picking gcc-4.0

* bind9: fix broken PowerPC assembler in rwlock

--- a/net/bind9/Portfile
+++ b/net/bind9/Portfile
@@ -38,10 +38,10 @@ use_xz          yes
 depends_build   port:pkgconfig
 
 depends_lib     path:lib/libssl.dylib:openssl  \
-                port:libuv \
+                path:lib/pkgconfig/libuv.pc:libuv \
                 port:libxml2 \
                 port:nghttp2 \
-                port:jemalloc \
+                path:lib/pkgconfig/jemalloc.pc:jemalloc \
                 port:json-c \
                 port:libidn2 \
                 port:lmdb
@@ -52,12 +52,13 @@ universal_variant \
 # Needs working __atomic_* builtins
 # Apple clang 15.0.0 from Xcode before 15.2 has a codgen bug that causes
 compiler.blacklist \
-                gcc-4.2 \
+                *gcc-4.0 *gcc-4.2 \
                 {clang < 500} \
                 {clang >= 1500.0.40.1 < 1500.1.0.2.5 }
 
 patchfiles      atomics.patch \
-                lib_dns_Makefile.in.patch
+                lib_dns_Makefile.in.patch \
+                patch-fix-rwlock.diff
 
 # tests require `sudo bin/tests/system/ifconfig.sh up`
 test.run        yes
@@ -90,6 +91,13 @@ platform darwin 8 {
 
 platform darwin 9 {
     configure.args-append --with-dlopen=no
+}
+
+if {${os.platform} eq "darwin" && ${os.major} < 10} {
+    # Until this is fixed: https://trac.macports.org/ticket/65945
+    depends_lib-delete \
+                path:lib/pkgconfig/jemalloc.pc:jemalloc
+    configure.args-append --with-jemalloc=no
 }
 
 post-destroot    {
