--- a/python/py-babel/Portfile
+++ b/python/py-babel/Portfile
@@ -5,15 +5,14 @@ PortGroup           python 1.0
 
 name                py-babel
 python.rootname     Babel
-version             2.12.1
+version             2.14.0
 revision            0
 categories-append   devel
 platforms           {darwin any}
 license             BSD
 supported_archs     noarch
 
-python.versions     27 35 36 37 38 39 310 311 312
-python.pep517       yes
+python.versions     27 37 38 39 310 311 312
 
 maintainers         {stromnov @stromnov} openmaintainer
 
@@ -25,31 +24,24 @@ long_description    Babel is an integrated collection of utilities that \
 
 homepage            http://babel.pocoo.org/
 
-checksums           rmd160  8fefe9e26d04f2c5c340d6bb8ab7e09cc70e44af \
-                    sha256  cc2d99999cd01d44420ae725a21c9e3711b3aadc7976d6147f622d8581963455 \
-                    size    9906735
+checksums           rmd160  aad51b5d581f5ad2034a23c10f50530697b89902 \
+                    sha256  6919867db036398ba21eb5c7a0f6b28ab8cbc3ae7a73a44ebe34ae74a4e7d363 \
+                    size    10795622
 
 if {${name} ne ${subport}} {
-
-    if {${python.version} < 37} {
-        if {${python.version} < 36} {
-            version     2.9.1
-            revision    0
-            checksums   rmd160  b833ad421470429e1740f19dc79e02842e3ff4b1 \
-                        sha256  bc0c176f9f6a994582230df350aa6e05ba2ebe4b3ac317eab29d9be5d2768da0 \
-                        size    8683505
-        } else {
-            version     2.11.0
-            revision    0
-            checksums           rmd160  1827b2e6f10ab38da79958f96cdf00ee17cd3c05 \
-                                sha256  5ef4b3226b0180dedded4229651c8b0e1a3a6a2837d45a073272f313e4cf97f6 \
-                                size    9346097
-        }
-        depends_lib-append  port:py${python.version}-setuptools
+    if {${python.version} eq 27} {
+        version             2.9.1
+        revision            0
+        checksums           rmd160  b833ad421470429e1740f19dc79e02842e3ff4b1 \
+                            sha256  bc0c176f9f6a994582230df350aa6e05ba2ebe4b3ac317eab29d9be5d2768da0 \
+                            size    8683505
         python.pep517       no
+        depends_lib-append  port:py${python.version}-setuptools
     }
 
-    depends_lib-append  port:py${python.version}-tz
+    if {${python.version} < 39} {
+        depends_lib-append  port:py${python.version}-tz
+    }
 
     depends_test-append port:py${python.version}-pytest \
                         port:py${python.version}-freezegun
