R-targets: update to 1.5.1

--- a/R/R-targets/Portfile
+++ b/R/R-targets/Portfile
@@ -3,16 +3,16 @@
 PortSystem          1.0
 PortGroup           R 1.0
 
-R.setup             github ropensci targets 1.4.1
+R.setup             github ropensci targets 1.5.1
 revision            0
 maintainers         {@barracuda156 gmail.com:vital.had} openmaintainer
 license             MIT
 description         Dynamic function-oriented make-like declarative workflows
 long_description    {*}${description}
 homepage            https://docs.ropensci.org/targets
-checksums           rmd160  8ca93c0fce749307c75654f75e785dc0e0b41487 \
-                    sha256  6922586ca37004b430cf9896e6e987ebc64ad1fed0c94e817ebb781f96bebaf6 \
-                    size    829560
+checksums           rmd160  606691b2b227978e4edeb67faca034eeb0443926 \
+                    sha256  a11c99ddd78579a05d29b008972e276582419c0a7329a9d52b377f6d3c6c7be2 \
+                    size    774394
 supported_archs     noarch
 
 depends_lib-append  port:R-base64url \
@@ -22,8 +22,10 @@ depends_lib-append  port:R-base64url \
                     port:R-digest \
                     port:R-igraph \
                     port:R-knitr \
+                    port:R-ps \
                     port:R-R6 \
                     port:R-rlang \
+                    port:R-secretbase \
                     port:R-tibble \
                     port:R-tidyselect \
                     port:R-vctrs \
