--- a/python/py-jsonschema/Portfile
+++ b/python/py-jsonschema/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-jsonschema
-version             4.20.0
+version             4.21.1
 revision            0
 categories-append   devel
 license             MIT
@@ -12,7 +12,6 @@ supported_archs     noarch
 platforms           {darwin any}
 
 python.versions     35 36 37 38 39 310 311 312
-python.pep517       yes
 python.pep517_backend hatch
 
 maintainers         {stromnov @stromnov} openmaintainer
@@ -22,9 +21,9 @@ long_description    {*}${description}
 
 homepage            https://github.com/python-jsonschema/jsonschema
 
-checksums           rmd160  d3809a9d155cf5842885e9b5615911097edf39b6 \
-                    sha256  4f614fd46d8d61258610998997743ec5492a648b33cf478c1ddc23ed4598a5fa \
-                    size    320243
+checksums           rmd160  09d7c7f8504b54fbf4aac3a7c48726df90f377d3 \
+                    sha256  85727c00279f5fa6bedbe6238d2aa6403bedd8b4864ab11207d07df3cc1b2ee5 \
+                    size    321491
 
 if {${name} ne ${subport}} {
     # CLI depends on pkg_resources.py from setuptools
@@ -46,13 +45,12 @@ if {${name} ne ${subport}} {
                             port:py${python.version}-pyrsistent \
                             port:py${python.version}-six
     } else {
-        patchfiles-append   patch-setup.py.diff
-
         depends_build-append \
                             port:py${python.version}-hatch-vcs \
                             port:py${python.version}-hatch-fancy-pypi-readme
 
-        if {${python.version} < 38} {
+        # On Yosemite and older OS-s rpds-py fails (requires rust)
+        if {${python.version} < 38 || (${os.platform} eq "darwin" && ${os.major} < 15)} {
             version             4.17.3
             checksums           rmd160  86637e335ef60176700311eb93e0d5dbbcb8d457 \
                                 sha256  0f864437ab8b6076ba6707453ef8f98a6a0d512a80e93f8abdb676f737ecb60d \
@@ -74,4 +72,30 @@ if {${name} ne ${subport}} {
     }
 
     livecheck.type      none
+}
+
+set subportpyversions   {38 39 310 311 312}
+foreach python_version ${subportpyversions} {
+    subport py${python_version}-jsonschema-format-nongpl {
+        long_description    An implementation of JSON Schema validation for Python.\
+                            Includes the format-nongpl extra dependencies.
+
+        supported_archs     noarch
+        distfiles
+        build {}
+        destroot {
+            xinstall -d -m 0755 ${destroot}${prefix}/share/doc/${subport}
+            system "echo ${subport} > ${destroot}${prefix}/share/doc/${subport}/stub"
+        }
+        depends_lib-append  port:py${python.version}-jsonschema \
+                            port:py${python.version}-fqdn \
+                            port:py${python.version}-idna \
+                            port:py${python.version}-isoduration \
+                            port:py${python.version}-jsonpointer \
+                            port:py${python.version}-rfc3339-validator \
+                            port:py${python.version}-rfc3986-validator \
+                            port:py${python.version}-uri-template \
+                            port:py${python.version}-webcolors
+        livecheck.type      none
+    }
 }
