py-clang: set platforms darwin any

--- a/python/py-clang/Portfile
+++ b/python/py-clang/Portfile
@@ -19,6 +19,7 @@ homepage \
     https://github.com/llvm/llvm-project/tree/main/clang/bindings/python
 
 supported_archs         noarch
+platforms               {darwin any}
 
 livecheck.url           https://api.github.com/repos/llvm/llvm-project/git/refs/tags
 # Update this to the most recent clang supported
